sc-vote-ui/cloud/k8s/sc-vote-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sc-vote
  labels:
    app: sc-vote
    tier: frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
#  type: LoadBalancer
  # if you are using ingress for LB, or just port-forward
  type: NodePort
  ports:
  - name: http
    port: 80
#  - name: https
#    port: 443
  selector:
    app: sc-vote
    tier: frontend
